--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import url(styles/header.css);
 
-:root{--cor-de-fundo: #EBECEE;  }
+:root{
+    --cor-de-fundo: #EBECEE;
+    --branco: #ffffff; }
+    
 
-body{background-color:var(--cor-de-fundo) ;}
+
+body{background-color:var(--cor-de-fundo); }
