--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,15 @@
 .cabecalho__menu-hamburguer
-{ width: 24px;
-height: 24px;
+{ width: 40px;
+height: 40px;
 background-image: url("../img/Menu.svg");
 display: inline-block;           }
 
+.cabecalho{
 
+background-color: var(--branco);
+display: flex;
+justify-content: space-around;
+align-items: center;    
+
+}
 
